# linalg

./: CMakeLists.txt  README.md
include/: gauss.hpp  jacobi.hpp  linalg.hpp  linalg_error.hpp  linalg_types.hpp  matrix.hpp  matrix_generator.hpp  sle_generator.hpp  utils.hpp  vector.hpp  vector_generator.hpp  wrapper.h
src/: gauss.cpp  jacobi.cpp  linalg_error.cpp  matrix.cpp  matrix_generator.cpp  sle_generator.cpp  utils.cpp  vector.cpp  vector_generator.cpp  wrapper.cpp
